--- a/springsecurity-joan/src/main/resources/application.properties
+++ b/springsecurity-joan/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=springsecurity-joan
-sring.datasource.url=jdbc:mysql://localhost:3306/db_jpa
+spring.datasource.url=jdbc:mysql://localhost:3306/db_jpa
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
